# code-arena

./: .devenv.flake.nix  .gitignore  .pre-commit-config.yaml  PR.md  README.md  main.py  pyproject.toml
.devenv/: input-paths.txt  load-exports  nix-eval-cache.db-shm  nix-eval-cache.db-wal  profile  run  tasks.db-shm  tasks.db-wal
.devenv/gc/: shell-1-link
examples/: sample-run.toml
mds/: briefing.md
src/code_arena/: __init__.py  __main__.py  cli.py  config.py  git_utils.py  logger.py  orchestrator.py
tests/: conftest.py  test_config.py  test_git_utils.py
